--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Flask==2.3.3
-mysql-connector-python==8.1.0
-mariadb==1.1.8
-reportlab==4.0.4
-Pillow==10.0.0
-flask-cors==4.0.0
-pandas==2.0.3
-openpyxl==3.1.2
-plotly==5.15.0
-requests==2.31.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+pyodbc==5.1.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+jinja2==3.1.2
+aiofiles==23.2.1
+httpx==0.25.2
+pytest==7.4.3
+pytest-asyncio==0.21.1
